--- a/src/dataware-client-skeleton/templates/layout.html
+++ b/src/dataware-client-skeleton/templates/layout.html
@@ -3,10 +3,17 @@
 <title>TPC</title>
 
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap/css/nv.d3.css') }}">
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/ui-lightness/jquery-ui.css" />
 <script src="{{ url_for('static', filename='jquery/jquery-1.7.2.min.js') }}"></script>
 <script src="{{ url_for('static', filename='jquery/jquery-ui.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+<script src="{{ url_for('static', filename='bootstrap/js/d3.v3.js') }}"></script>
+<script src="{{ url_for('static', filename='bootstrap/js/nv.d3.js') }}"></script>
+<script src="{{ url_for('static', filename='bootstrap/js/legend.js') }}"></script>
+<script src="{{ url_for('static', filename='bootstrap/js/pie.js') }}"></script>
+<script src="{{ url_for('static', filename='bootstrap/js/pieChart.js') }}"></script>
+<script src="{{ url_for('static', filename='bootstrap/js/utils.js') }}"></script>
 
 <script src="{{ url_for('static', filename='knockout/knockout-min.js') }}"></script> 
 <script src="{{ url_for('static', filename='knockout/knockout-mapping.js') }}"></script> 
