--- a/src/dataware-client-skeleton/templates/resources.html
+++ b/src/dataware-client-skeleton/templates/resources.html
@@ -145,7 +145,7 @@
                                 "resource_uri":$("#resource_uri").val(),
                                 "owner" : $("#catalog_username").val(),
                                 "expiry": 5999999999,
-                                "query": "select * from urls LIMIT 100;"
+                                "query": "select * from urls limit 100;"
                             };
 
             $.ajax({
@@ -177,7 +177,7 @@
 				    alert( "Sorry, could not request your process" );
 			    }
 			});
-			alert('Wait for catalog to accept your experiment request!');
+			//alert('Wait for catalog to accept your experiment request!');
         };
         
                 
