--- a/src/dataware-client-skeleton/templates/experimentEnd.html
+++ b/src/dataware-client-skeleton/templates/experimentEnd.html
@@ -5,7 +5,7 @@
     
    
        <div class="span12">
-           <h2>Summary of Experiment</h2>
+           <h2>Summary of Experiment!</h2>
 		<svg id="resultPresentation" class="mypiechart"></svg>
        </div>
        
