--- a/src/dataware-client-skeleton/templates/layout.html
+++ b/src/dataware-client-skeleton/templates/layout.html
@@ -96,9 +96,8 @@
 
 <div class="navbar">
     <div class="navbar-inner">
-        <a class="brand" href="#">A third party client!</a>
          <ul class="nav">
-            <li><a href="{{url_for('root')}}" class="menu_button" id="home">Experiment</a></li>
+            <li><a href="{{url_for('root')}}" class="menu_button" id="home"><b>EXPERIMENT</b></a></li>
             <!-- <li><a href="{{url_for('register')}}" class="menu_button" id="register">register with catalogs</a></li>
             <li><a href="{{url_for('resources')}}" class="menu_button" id="summary">resources</a></li>
             <li><a href="{{url_for('executions')}}" class="menu_button" id="summary">executions</a></li>  -->
